# one-off

./: README.md
animwal/: LICENSE  README.md  pyproject.toml  setup.py
animwal/animwal/: __main__.py  animate.py  helpers.py  linux.py  windows.py
fourier-transform/: main.py
maze-generator/: main.py
particle/: Cargo.toml
particle/src/: grid.rs  main.rs  particle.rs
perceptron/: model.json  perceptron.py
ray-casting/: main.py
smart-lines/: main.py  vector.py
software-renderer/: main.py  map_editor.py
software-renderer/libm/: __init__.py  camera.py  common.py  shape.py
software-renderer/maps/: sigma.na
software-renderer/objects/: cube.na  pyramid.na  sphere.na
